fix: size word on mobile screen

--- a/src/components/game/game.css
+++ b/src/components/game/game.css
@@ -10,8 +10,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: var(--text-normal);
-  letter-spacing: 17px;
+  font-size: var(--text-small);
+  letter-spacing: 12px;
   border: 1px solid var(--color-8-opacity);
   border-radius: var(--border-radius-2);
   background-color: var(--color-4);
@@ -185,6 +185,7 @@
   }
   .word-guess__text {
     font-size: var(--text-large);
+    letter-spacing: 17px;
   }
   .actions {
     gap: 80px;
